# librarian

./: .dockerignore  .flake8  .fourmat  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ROADMAP.md  client.py  manage.py  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: build-and-push.yml  build.yml  integration.yml  lint.yml  test-build-and-push.yml  test.yml
client/: craco.config.js  cypress.json  package-lock.json  package.json
client/cypress/: tsconfig.json
client/cypress/integration/: app.spec.ts  settings.spec.ts
client/public/: index.html
client/src/: index.css  index.tsx
client/src/actions/: Library.ts
client/src/components/: App.css  App.tsx  CreateFolderModal.tsx  EditableText.tsx  Job.css  Job.tsx  Loading.tsx  Note.tsx  Pagination.tsx  Progress.tsx  Search.tsx  SearchResults.tsx  Searchbar.tsx  SetupWizard.tsx  SetupWizardModal.tsx  Shell.css  Shell.tsx  Sidebar.tsx  Uploader.css  Uploader.tsx  Viewer.tsx
client/src/models/: Document.ts  DocumentText.ts  Folder.ts  Job.ts  Library.ts  Resource.ts  Settings.ts  Tag.ts
client/src/stores/: index.ts
client/src/utils/: Api.ts  findNextAndPrev.ts  setInterval.ts  toasts.ts  useContainerDimenstions.ts
docs/: CNAME  index.html  styles.css
landing-site/: index.html
librarian/: __init__.py  settings.py  urls.py  wsgi.py
librarian/api/: apps.py  models.py  permissions.py  serializers.py  views.py
librarian/api/engine/: engine.py
librarian/api/migrations/: 0001_initial.py  0002_document_source_content_type.py  0002_settings_dismissed_setup_wizard.py  0002_setup.py  0003_rename_api_key_setup_gc_api_key.py  0003_tag.py  0004_alter_document_status.py  0004_rename_job_documentjob_kind.py  (+2 more)
librarian/engine/: engine.py
librarian/utils/: attrs.py  enum.py  google_cloud_vision.py  hash.py
tests/: helpers.py  test_config_views.py  test_document_views.py  test_folder_views.py  test_settings_views.py  test_tag_views.py
tests/fixtures/: ocr_metadata.json
(+53 files in other folders)
